Use environment variable for MongoDB URI
Replaced hardcoded MongoDB URI with environment variable.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8080
 # lRKdkfga0ptPaUUG
 # mongodb+srv://czsubham_db_user:lRKdkfga0ptPaUUG@cluster0.k5agxsq.mongodb.net/?appName=Cluster0
 # ===============================
-spring.data.mongodb.uri= mongodb+srv://czsubham_db_user:lRKdkfga0ptPaUUG@cluster0.k5agxsq.mongodb.net/?appName=Cluster0
+spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=eccomerce
 # ===============================
 # JWT Configuration
