Comment out spring.security.enabled property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.data.mongodb.database=eccomerce
 #spring.security.user.password=admin123
 
 
-spring.security.enabled=false
+#spring.security.enabled=false
 
 
 # ===============================
