Disable logging for Spring Security
Comment out logging level for Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ spring.data.mongodb.database=eccomerce
 # ===============================
 # Logging (optional)
 # ===============================
-logging.level.org.springframework.security=INFO
+#logging.level.org.springframework.security=INFO
